--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,14 +3,16 @@
 
 $xs-breakpoint: 399.98px;
 $sm-breakpoint: 575.98px;
+$sm-breakpoint600: 600px;
 $md-breakpoint: 767.98px;
 $tablet-breakpoint: 991px;
 $menu-custom-breakpoint: 1000px;
+$menu-custom-breakpoint-min: 1001px;
 $xl-breakpoint: 1199.98px;
 $mainColor: #0082c9; //rgb(0, 130, 201)
 $mainColorDarker: #00659b;
 $lightColor: #1cafff; // rgb(28, 175, 255)
-$textColor: #191717;
+$textColor: #050404;
 $communityColor: rgb(219, 237, 248); //hex: #DBEDF8 // rgba(0, 130, 201, 0.14)
 $successColor: #42E553;
 $successBGColor: #00ce48;
