New cookie banner, feature blog carousel
Signed-off-by: Peter Mocanu <info@petermocanu.com>

--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -204,6 +204,7 @@ footer {
                 a {
                     opacity: 0.5;
                     transition: all 0.3s ease;
+                    color: #fff;
 
                     &:hover {
                         opacity: 1;
