--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -10,6 +10,7 @@ $menu-custom-breakpoint: 1000px;
 $menu-custom-breakpoint-min: 1001px;
 $xl-breakpoint: 1199.98px;
 $mainColor: #0082c9; //rgb(0, 130, 201)
+$primary: #007bbd; // darker blue for accessibility
 $mainColorDarker: #00659b;
 $lightColor: #1cafff; // rgb(28, 175, 255)
 $textColor: #050404;
@@ -17,6 +18,7 @@ $communityColor: rgb(219, 237, 248); //hex: #DBEDF8 // rgba(0, 130, 201, 0.14)
 $successColor: #42E553;
 $successBGColor: #00ce48;
 $errorColor: #FE5252;
+$youtube: #FF0000;
 $lightBG: rgba(0,130,201,0.14);
 $borderRadius:15px;
 $borderRadiusLarger:25px;
