--- a/assets/header.scss
+++ b/assets/header.scss
@@ -533,24 +533,23 @@ header {
                                     font-family: 'Font Awesome 5 Free';
                                     font-weight: 900;
                                     position: absolute;
-                                    //top: 17px;
                                     left: 0;
                                 }
 
                                 padding-left: 16px;
                                 text-transform: uppercase;
 
-                                /*
-                                &:after {
-                                    content: "\f107";
-                                    font-family: 'Font Awesome 5 Free';
-                                    font-weight: 900;
-                                    position: absolute;
-                                    top: 17px;
-                                    right: -7px;
-                                    left: auto;
+                                
+                                span.wpml-ls-native {
+                                    font-size: 0px;
+                                    
+                                    &:before {
+                                        margin-left: .3em;
+                                        content: attr(lang);
+                                        font-size: 16px;
+                                    }
                                 }
-                                */
+
 
                                 img.wpml-ls-flag {
                                     max-width: 23px;
