CSS updated + new shortcode for NC Features page
Signed-off-by: Peter Mocanu <info@petermocanu.com>

--- a/assets/cookie-banner.scss
+++ b/assets/cookie-banner.scss
@@ -13,11 +13,17 @@
     max-width: 90%;
     width: 900px;
 
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: calc(95vh);
+
+        /*
     @media screen and (max-width: $sm-breakpoint) {
         overflow-y: scroll;
         overflow-x: hidden;
         max-height: calc(95vh);
     }
+    */
     
 
 
