--- a/assets/footer.scss
+++ b/assets/footer.scss
@@ -229,7 +229,7 @@ footer {
     right: 20px;
     bottom: 20px;
     padding: 4px 10px;
-    
+    z-index:9;
     border-radius: 5px;
     background-color: #fff;
     color: $mainColor;
@@ -238,11 +238,5 @@ footer {
     &:hover {
         background-color: $mainColor;
         color: #fff;
-    }
-  }
-
-@media (max-width: 1399.98px) {
-    footer #menu-footer-menu-container {
-       //padding: 50px 0px 40px 120px;
     }
 }
